test/runnable/extra-files/importc_main2.d

import std.stdio;
import importc_test;

int main()
{
    intptr_t iptr;
    return 0;
}
